[gd_scene load_steps=4 format=2]

[ext_resource path="res://core/pimnet/memo_slot/memo_slot.tscn" type="PackedScene" id=1]
[ext_resource path="res://core/pimnet/slot_panel/slot_panel.tscn" type="PackedScene" id=2]
[ext_resource path="res://content/general/slot_panels/number_selector/number_selector.gd" type="Script" id=3]

[node name="NumberSelector" instance=ExtResource( 2 )]
script = ExtResource( 3 )

[node name="CenterContainer" type="CenterContainer" parent="." index="0"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer" index="0"]
margin_left = 561.0
margin_top = 257.0
margin_right = 719.0
margin_bottom = 543.0

[node name="MemoSlot" parent="CenterContainer/VBoxContainer" index="0" instance=ExtResource( 1 )]
unique_name_in_owner = true
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 158.0
margin_bottom = 70.0
__meta__ = {
"_edit_pinned_properties_": [ "memo_input_enabled" ]
}
memo_input_enabled = false

[node name="GridContainer" type="GridContainer" parent="CenterContainer/VBoxContainer" index="1"]
margin_top = 74.0
margin_right = 158.0
margin_bottom = 232.0
columns = 3

[node name="Button7" type="Button" parent="CenterContainer/VBoxContainer/GridContainer" index="0"]
unique_name_in_owner = true
margin_right = 50.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 50 )
text = "7"

[node name="Button8" type="Button" parent="CenterContainer/VBoxContainer/GridContainer" index="1"]
unique_name_in_owner = true
margin_left = 54.0
margin_right = 104.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 50 )
text = "8"

[node name="Button9" type="Button" parent="CenterContainer/VBoxContainer/GridContainer" index="2"]
unique_name_in_owner = true
margin_left = 108.0
margin_right = 158.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 50 )
text = "9"

[node name="Button4" type="Button" parent="CenterContainer/VBoxContainer/GridContainer" index="3"]
unique_name_in_owner = true
margin_top = 54.0
margin_right = 50.0
margin_bottom = 104.0
rect_min_size = Vector2( 50, 50 )
text = "4"

[node name="Button5" type="Button" parent="CenterContainer/VBoxContainer/GridContainer" index="4"]
unique_name_in_owner = true
margin_left = 54.0
margin_top = 54.0
margin_right = 104.0
margin_bottom = 104.0
rect_min_size = Vector2( 50, 50 )
text = "5"

[node name="Button6" type="Button" parent="CenterContainer/VBoxContainer/GridContainer" index="5"]
unique_name_in_owner = true
margin_left = 108.0
margin_top = 54.0
margin_right = 158.0
margin_bottom = 104.0
rect_min_size = Vector2( 50, 50 )
text = "6"

[node name="Button1" type="Button" parent="CenterContainer/VBoxContainer/GridContainer" index="6"]
unique_name_in_owner = true
margin_top = 108.0
margin_right = 50.0
margin_bottom = 158.0
rect_min_size = Vector2( 50, 50 )
text = "1"

[node name="Button2" type="Button" parent="CenterContainer/VBoxContainer/GridContainer" index="7"]
unique_name_in_owner = true
margin_left = 54.0
margin_top = 108.0
margin_right = 104.0
margin_bottom = 158.0
rect_min_size = Vector2( 50, 50 )
text = "2"

[node name="Button3" type="Button" parent="CenterContainer/VBoxContainer/GridContainer" index="8"]
unique_name_in_owner = true
margin_left = 108.0
margin_top = 108.0
margin_right = 158.0
margin_bottom = 158.0
rect_min_size = Vector2( 50, 50 )
text = "3"

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer" index="2"]
margin_top = 236.0
margin_right = 158.0
margin_bottom = 286.0

[node name="Button0" type="Button" parent="CenterContainer/VBoxContainer/HBoxContainer" index="0"]
unique_name_in_owner = true
margin_right = 50.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 50 )
text = "0"

[node name="ClearButton" type="Button" parent="CenterContainer/VBoxContainer/HBoxContainer" index="1"]
unique_name_in_owner = true
margin_left = 54.0
margin_right = 158.0
margin_bottom = 50.0
size_flags_horizontal = 3
text = "Clear"
